# pdi_comparison

./: CMakeLists.txt
include/: Utils.hpp  ambe.hpp  bhe3pl.hpp  contrast.hpp  entropy.hpp  psnr.hpp
src/: main.cpp
tests/: ambe_tests.cpp  bhe3pl_tests.cpp  contrast_tests.cpp  entropy_tests.cpp  psnr_tests.cpp
